--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@
 </header>
 <main>
 	<div id="banner">
-		<button class="arrow arrow_left prev">
-			<img src="./assets/images/arrow_left.png" alt="flèche gauche">
-		</button>
-		<button class="arrow arrow_right next">
-			<img src="./assets/images/arrow_right.png" alt="flèche droite">
-		</button>
+		<img class="arrow arrow_left prev" src="./assets/images/arrow_left.png" alt="flèche gauche">
+		<img class="arrow arrow_right next" src="./assets/images/arrow_right.png" alt="flèche droite">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
@@ -133,6 +129,6 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src="./assets/script.js"></script>
+<script src="./assets/script.js" defer></script>
 </body>
 </html>
